css/sab-stylesheet.css
/* ... */
span.qac {
    font-weight: bold;
    font-style: italic;
}

div.b {
    padding-top: 0px;
    line-height: 60%;
}

div.sd {
    padding-top: 1em;
}

div.sd2 {
    padding-top: 2em;
}

div.top-spacing {
    padding-top: 12px;
}

div.lh {
    padding-left: 0%;
    padding-right: 0%;
    padding-top: 12px;
    text-indent: 3%;
}

div.li {
    padding-left: 20%;
    text-indent: -15%;
}

div.li-v {
    padding-left: 20%;
    text-indent: -18%;
}

div.li-vv {
    padding-left: 20%;
    text-indent: -19%;
}

div.li2 {
    padding-left: 20%;
    text-indent: -8%;
}

div.li2-v {
    padding-left: 20%;
    text-indent: -11%;
}

div.li2-vv {
    padding-left: 20%;
    text-indent: -13%;
}

div.li3 {
    padding-left: 12%;
}

div.lf {
    padding-left: 0%;
    padding-right: 0%;
    padding-top: 12px;
    text-indent: 0;
}

span.add {
    font-style: italic;
}

span.bk {
    font-style: italic;
}

span.dc {
    font-style: italic;
}

span.lit {
    font-weight: bold;
}

span.nd {
    font-variant: small-caps;
	white-space: nowrap;
}

span.nd2 {
    font-variant: small-caps;
    vertical-align: sub;
    font-weight: bold;   
    font-size: 60%;
}

span.ord {
    font-size: 70%;
    position: relative;
    top: -0.4em;
}

span.pn {
    font-style: italic;
}

span.png {
    text-decoration: underline;
}

span.qt {
    font-style: italic;
}

span.sig {
    font-style: italic;
}

span.sls {
    font-style: italic;
}

span.tl {
    font-style: italic;
}

span.k {
    font-weight: bold;
}

span.vp {
    color: #D32F2F;
    font-size: 80%;
}

span.wg {
}

span.wh {
}

span.wa {
}

span.em {
    font-style: italic;
}

span.bd {
    font-weight: bold;
}

span.it {
    font-style: italic;
}

span.bdit {
    font-weight: bold;
    font-style: italic;
    font-variant: small-caps;
    vertical-align: bottom;
    font-size: 60%;
}

span.ul {
    text-decoration: none;
    vertical-align: top;
    font-size: 60%;
}

span.sc {
    font-variant: small-caps;
}

span.no {
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
}

span.fr {
    font-weight: bold;
}

span.fk {
    font-weight: bold;
}

span.fq {
    font-style: italic;
}

span.fqa {
    font-style: italic;
}

span.fl {
    font-style: italic;
}

span.fv {
    color: #D32F2F;
    font-size: 70%;
    font-style: normal;
    position: relative;
    top: -0.4em;
}

span.fw {
    font-style: normal;
}

body.footnote {
    margin-left: 4%;
    margin-right: 4%;
    background-color: #E0E0E0;
}

span.glossary {
    font-weight: normal;
    font-style: normal;
    text-decoration: none;
    color: green;
}

span.footnote {
    color: navy;
    font-weight: bold;
}

span.fnspan {
	margin-left: -0.2em	
}

span.glospan {
	margin-left: 0em;
}

span.xo {
    font-weight: bold;
}

span.xk {
    font-weight: bold;
}

span.xta {
    font-style: normal;
}

body.crossref {
    margin-left: 4%;
    margin-right: 4%;
    background-color: #E0E0E0;
}

span.image {
}

div.image-block {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

div.caption {
    text-align: center;
    padding-top: 6px;
}

span.caption {
    font-style: italic;
    font-size: 90%;
}

div.video-block {
    text-align: center;
    margin-top: 15px;
    margin-bottom: 20px;
    background-color: #E0E0E0;
}

span.video-title {
    font-size: 90%;
}

div.video-title {
    text-align: center;
    padding-top: 0.4em;
    padding-bottom: 0.4em;
}

div.about-image-block {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

img.about-image {
    width: 50%;
}

div.is {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 2px;
    color: #6C0000;
    font-weight: bold;
    font-size: 110%;
    page-break-after: avoid;
}

div.is2 {
    text-align: center;
    padding-top: 20px;
    padding-bottom: 2px;
    color: #6C0000;
    font-weight: bold;
    font-size: 110%;
    page-break-after: avoid;
}

div.imt {
    text-align: center;
    color: #6C0000;
    font-weight: bold;
    font-size: 130%;
    page-break-after: avoid;
}

div.imt2 {
    text-align: center;
    color: #6C0000;
    font-weight: bold;
    font-size: 130%;
    page-break-after: avoid;
}

div.imte {
    text-align: center;
    color: #6C0000;
    font-weight: bold;
    font-size: 130%;
}

div.imte2 {
    text-align: center;
    color: #6C0000;
    font-weight: bold;
    font-size: 130%;
}

div.iot {
    text-align: left;
    color: #6C0000;
    font-weight: bold;
}

span.ior {
    font-style: italic;
}

div.io {
    padding-left: 4%;
}

div.io2 {
    padding-left: 6%;
}

div.io3 {
    padding-left: 8%;
}

div.iex {
    padding-top: 12px;
    font-style: italic;
}

div.ip {
    padding-top: 12px;
    text-indent: 3%;
}

div.ipi {
    padding-left: 8%;
    padding-right: 0%;
    padding-top: 12px;
    text-indent: 3%;
}

div.ipr {
    padding-top: 12px;
    text-align: right;
}

div.im {
    padding-top: 12px;
    text-indent: 0;
}

div.ili {
    padding-top: 8px;
    padding-left: 20%;
    text-indent: -15%;
}

div.ili2 {
    padding-top: 8px;
    padding-left: 20%;
    text-indent: -8%;
}

div.ili3 {
    padding-top: 8px;
    padding-left: 12%;
}

div.iq {
    padding-left: 5%;
    padding-top: 12px;
    padding-right: 2%;
}

div.ib {
    padding-top: 0px;
    line-height: 60%;
}

table {
    font-size: 90%;
}

td.th1 {
    text-align: left;
    font-style: italic;
}

td.th2 {
    text-align: left;
    font-style: italic;
}

td.th3 {
    text-align: left;
    font-style: italic;
}

td.th4 {
    text-align: left;
    font-style: italic;
}

td.th5 {
    text-align: left;
    font-style: italic;
}

td.th6 {
    text-align: left;
    font-style: italic;
}

td.thr1 {
    text-align: right;
    font-style: italic;
}

td.thr2 {
    text-align: right;
    font-style: italic;
}

td.thr3 {
    text-align: right;
    font-style: italic;
}

td.thr4 {
    text-align: right;
    font-style: italic;
}

td.thr5 {
    text-align: right;
    font-style: italic;
}
/* ... */

